--- a/WpfApp1223/WpfApp1223/Properties/Resources.resx
+++ b/WpfApp1223/WpfApp1223/Properties/Resources.resx
@@ -39408,4 +39408,7 @@
   <data name="pizza" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\pizza.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Аполлон" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\Аполлон.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
